
Changelog:
==========

v1.11

- Changes / Features

Tsmuxer and flac binaries are now available in the OSX build, this adds a lot of features on Mac which were previously only available on Windows or Linux (like DTS and remux support)
Handling of UTF8 and UTF16 encoding, and case insensitive external subtitles
OSX: now using Mac native look
Windows: launcher now detects Java 64 bits if installed
Updated tsMuxer binaries for Windows/Linux
Externalization of PS3/Xbox playback profiles, it's now possible to create profiles for any media renderer
New build script for OSX to make a bundle or dmg automatically (thanks to Josh Klun)
New translations: Slovenian (thanks to Rob Wall)

- Fixes

Media library major speed and size improvements (you may have to reset the library)
Improved fix for the stopped videos issue
Better support for mkvs with NTSC video track
Fix spaces usage in the audio/subtitles configurations

v1.10.5

- Fixes:

Regression in FLAC playback
Fixed subtitles font detection on Windows
Flaw in the transcode/remux buffer, in some cases, the video stopped after a few minutes
Cache bug when streaming web medias
Duplicate items issue on Linux
Upnp alive message sent sooner at the start of the server

v1.10

- Changes / Features : Windows/Linux

DTS / DTS-HD core audio tracks are now streamable without reencoding (DVD ISOs not supported yet)
New Option: unification of Mencoder/tsMuxer engines, including:
. Automatic choice between H264 muxing or transcoding, based on AVC Level 4.1 compatibility and subtitles configuration
. Remux on the fly any H264 content from MOV, MP4, and AVI containers (ex: Apple HD Trailers)
. This option is enabled by default and can be disabled via the #Video Settings# virtual menu if anything goes wrong
TS/M2TS support improvement
2 channels downmixing support with PCM conversion

- Changes / Features : All Platforms

XBox 360 unofficial support (Pictures/Music/Videos : WMV8/WMA2 transcoding)