@@ -19,4 +19,4 @@ MaxVideoBitrateMbps=0
 MaxVideoWidth=0
 MaxVideoHeight=0
 TranscodeExtensions=
-StreamExtensions=mkv
+StreamExtensions=mkv,hdmov,hdm,flac,fla,dts,ogg,asf,asx,m2v
